# szprotka

./: Cargo.toml  flake.nix
src/: app.rs  error.rs  input.rs  main.rs  sse.rs  tui.rs  web.rs
src/tui/: forms.rs  mod.rs  sse.rs  tui.rs  utils.rs
src/web/: mod.rs  req.rs  sse.rs
