[package]
name = "dice-roller-client"
edition = "2021"
version = "0.1.0"

[dependencies]
eventsource-client = "0.12.2"
futures = "0.3.30"
serde_json = "1.0.114"

[dependencies.reqwest]
version = "0.11"
features = ["serde_json", "json", "blocking"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
