cargo-features = ["edition2024"]
[package]
name = "szprotka"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
eventsource-client = "0.13.0"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = [ "blocking", "json" ]}
serde = { version = "1.0.217", features = [ "derive" ]}
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [ "full" ]}
